Modified sdstate.py, allowing working with 2e and 1e tensor. Modified lanczos iteration, allowing efficient parallelization and search in specific number of electrons subspace.

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "90bcb83b",
+   "id": "67535d08",
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +70,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e60887c",
+   "id": "e1f956b3",
    "metadata": {},
    "source": [
-    "n_qubit = 12\n",
+    "## n_qubit = 12\n",
     "HF E_max: 15.8753163276\n",
     "HF E_min: 12.824966791534049\n",
     "Hartree-Fock dE = 3.0503495360659514\n",
