Decoupled sdstate with lanczos and HF estimations into two files

--- a/Lanczos_demo.ipynb
+++ b/Lanczos_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "529e1dae",
    "metadata": {},
    "outputs": [
@@ -19,9 +19,11 @@
    ],
    "source": [
     "import openfermion as of\n",
-    "from sdstate import *\n",
     "import pickle\n",
     "import numpy as np\n",
+    "from lanczos_utils import *\n",
+    "from sdstate import *\n",
+    "\n",
     "path = \"./Hamiltonians/\"\n",
     "mol = \"LiH\"\n",
     "with open(path + mol + \".pkl\", \"rb\") as f:\n",
@@ -40,9 +42,10 @@
     "        elif len(term) ==4:\n",
     "            H2e[term[0][0], term[1][0],term[2][0], term[3][0]] = coeff\n",
     "    return H1e, H2e\n",
+    "\n",
     "H1e, H2e = get_1e_2e_tensor(Hf, spin_orbs)\n",
-    "# print(Hf)\n",
-    "# Remove constant term to eliminate constant shif\n",
+    "\n",
+    "# Remove constant term to eliminate constant shift\n",
     "Hf -= Hf.terms[()]\n",
     "neutral_enum = 4\n",
     "# The range of electron number subspaces to search\n",
@@ -59,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78af6309",
+   "id": "490c32ad",
    "metadata": {},
    "outputs": [],
    "source": []
